--- a/程式計劃書.md
+++ b/程式計劃書.md
@@ -128,10 +128,10 @@
 
 14. **GitHub 與 Streamlit Cloud 部署**
     - [x] 推送程式碼到 GitHub
-    - [ ] 設定 Streamlit Cloud 帳號
-    - [ ] 連結 GitHub Repository
-    - [ ] 設定環境變數（API Key）
-    - [ ] 測試線上版本
+    - [x] 設定 Streamlit Cloud 帳號
+    - [x] 連結 GitHub Repository
+    - [x] 設定環境變數（API Key）
+    - [x] 測試線上版本
     - [x] 撰寫使用說明文件（README.md, DEPLOYMENT.md）
 
 ## 專案檔案結構
